--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -90,7 +90,12 @@ jobs:
         if: github.event_name == 'pull_request'
         id: coverage
         run: |
+          echo "Checking for coverage files..."
+          ls -la coverage-*.json || echo "No coverage json files found"
+          ls -la packages/server/coverage/ || echo "No server coverage directory"
+
           if [ -f "coverage-pr.json" ]; then
+            echo "Found coverage-pr.json"
             PR_TOTAL=$(jq '.total' coverage-pr.json)
             PR_LINES=$(echo $PR_TOTAL | jq -r '.lines.pct')
             PR_STATEMENTS=$(echo $PR_TOTAL | jq -r '.statements.pct')
@@ -140,11 +145,12 @@ jobs:
             
             cat coverage-report.md >> $GITHUB_STEP_SUMMARY
           else
-            echo "Coverage report not available" > coverage-report.md
-          fi
+            echo "coverage-pr.json not found, generating basic report"
+            cat << 'EOF' > coverage-report.md
+          ## 📊 Server Code Coverage Report
 
-      - name: Comment Coverage on PR
-        if: github.event_name == 'pull_request' && success()
+          Coverage data is being generated. This report will be available on the next run.
+          EOF
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: coverage
