--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -198,5 +198,47 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build client
+        run: npm run build --workspace=packages/client
+
+      - name: Build server
+        run: npm run build --workspace=packages/server
+
+      - name: Initialize mocked card files
+        run: node packages/scripts/src/create_local_files.js
+
+      - name: Start server in background
+        run: |
+          cd packages/server
+          node dist/server/src/index.js &
+          echo $! > server.pid
+          # Wait for server to start
+          for i in {1..30}; do
+            if curl -s http://localhost:5000 > /dev/null; then
+              echo "Server is up!"
+              break
+            fi
+            echo "Waiting for server to start... ($i/30)"
+            sleep 2
+          done
+
+      - name: Install Playwright browsers
+        run: npm run playwright:install --workspace=packages/integrationTests
+
       - name: Run integration tests
-        run: npm run test:integration
+        run: npm run test:ci --workspace=packages/integrationTests
+
+      - name: Stop server
+        if: always()
+        run: |
+          if [ -f packages/server/server.pid ]; then
+            kill $(cat packages/server/server.pid) || true
+          fi
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: packages/integrationTests/playwright-report/
+          retention-days: 30
