--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -13,7 +13,8 @@
     "setup:local:localstack": "./src/local/init_localstack.sh",
     "setup:local:env": "cp -n .env_EXAMPLE .env",
     "setup:local:files": "node src/create_local_files.js",
-    "setup:local:db": "NODE_OPTIONS=--max-old-space-size=8192 ts-node -r tsconfig-paths/register src/createTables.ts"
+    "setup:local:db": "NODE_OPTIONS=--max-old-space-size=8192 ts-node -r tsconfig-paths/register src/createTables.ts",
+    "create-mock-files": "ts-node src/create_local_files.ts"
   },
   "author": "",
   "license": "ISC",
