--- a/packages/cdk/tsconfig.json
+++ b/packages/cdk/tsconfig.json
@@ -21,5 +21,5 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["node_modules", "cdk.out"]
+  "exclude": ["node_modules", "cdk.out", "test/**/*"]
 }
