--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -220,6 +220,50 @@ jobs:
         run: |
           awslocal s3 mb s3://local
           awslocal ses verify-email-identity --email support@cubecobra.com
+
+          # Create DynamoDB table
+          awslocal dynamodb create-table \
+            --table-name LOCAL_CUBECOBRA \
+            --attribute-definitions \
+              AttributeName=PK,AttributeType=S \
+              AttributeName=SK,AttributeType=S \
+              AttributeName=GSI1PK,AttributeType=S \
+              AttributeName=GSI1SK,AttributeType=S \
+              AttributeName=GSI2PK,AttributeType=S \
+              AttributeName=GSI2SK,AttributeType=S \
+              AttributeName=GSI3PK,AttributeType=S \
+              AttributeName=GSI3SK,AttributeType=S \
+              AttributeName=GSI4PK,AttributeType=S \
+              AttributeName=GSI4SK,AttributeType=S \
+            --key-schema \
+              AttributeName=PK,KeyType=HASH \
+              AttributeName=SK,KeyType=RANGE \
+            --global-secondary-indexes \
+              "[
+                {
+                  \"IndexName\": \"GSI1\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI1PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI1SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI2\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI2PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI2SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI3\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI3PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI3SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI4\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI4PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI4SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                }
+              ]" \
+            --billing-mode PAY_PER_REQUEST
+
+          echo "DynamoDB table created successfully"
         env:
           AWS_ENDPOINT: http://localhost:4566
           AWS_ACCESS_KEY_ID: test
