--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,9 +9,9 @@ on:
       - 'master'
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v4
@@ -30,12 +30,53 @@ jobs:
         run: npm install
 
       - name: Run linting (Prettier + ESLint)
-        if: always()
         run: npm run lint:check
 
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    permissions:
+      contents: read
+      pull-requests: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Run tests
-        if: always()
         run: npm run test:ci
+
+      - name: Save PR coverage
+        if: github.event_name == 'pull_request'
+        run: cp packages/server/coverage/coverage-summary.json coverage-pr.json
+
+      - name: Switch to base branch and get base coverage
+        if: github.event_name == 'pull_request'
+        run: |
+          git fetch origin ${{ github.base_ref }}
+          git reset --hard HEAD
+          git clean -fd
+          git checkout origin/${{ github.base_ref }}
+          npm install
+          npm run test:ci || echo "Base branch tests failed, will skip delta"
+          if [ -f "packages/server/coverage/coverage-summary.json" ]; then
+            cp packages/server/coverage/coverage-summary.json coverage-base.json
+          else
+            echo '{"total":{"lines":{"pct":0},"statements":{"pct":0},"functions":{"pct":0},"branches":{"pct":0}}}' > coverage-base.json
+          fi
+          git reset --hard HEAD
+          git clean -fd
+          git fetch origin pull/${{ github.event.pull_request.number }}/head:pr-branch
+          git checkout pr-branch
 
       - name: Upload Jest Coverage Report
         if: success()
@@ -43,7 +84,282 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: jest-coverage
-          path: coverage
+          path: packages/server/coverage
+
+      - name: Generate Coverage Report with Delta
+        if: github.event_name == 'pull_request'
+        id: coverage
+        run: |
+          echo "Checking for coverage files..."
+          ls -la coverage-*.json || echo "No coverage json files found"
+          ls -la packages/server/coverage/ || echo "No server coverage directory"
+
+          if [ -f "coverage-pr.json" ]; then
+            echo "Found coverage-pr.json"
+            PR_TOTAL=$(jq '.total' coverage-pr.json)
+            PR_LINES=$(echo $PR_TOTAL | jq -r '.lines.pct')
+            PR_STATEMENTS=$(echo $PR_TOTAL | jq -r '.statements.pct')
+            PR_FUNCTIONS=$(echo $PR_TOTAL | jq -r '.functions.pct')
+            PR_BRANCHES=$(echo $PR_TOTAL | jq -r '.branches.pct')
+            
+            BASE_TOTAL=$(jq '.total' coverage-base.json)
+            BASE_LINES=$(echo $BASE_TOTAL | jq -r '.lines.pct')
+            BASE_STATEMENTS=$(echo $BASE_TOTAL | jq -r '.statements.pct')
+            BASE_FUNCTIONS=$(echo $BASE_TOTAL | jq -r '.functions.pct')
+            BASE_BRANCHES=$(echo $BASE_TOTAL | jq -r '.branches.pct')
+            
+            # Calculate deltas using awk instead of bc for better compatibility
+            LINES_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_LINES - $BASE_LINES}")
+            STATEMENTS_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_STATEMENTS - $BASE_STATEMENTS}")
+            FUNCTIONS_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_FUNCTIONS - $BASE_FUNCTIONS}")
+            BRANCHES_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_BRANCHES - $BASE_BRANCHES}")
+            
+            # Format delta with + sign for positive values
+            format_delta() {
+              if [ $(echo "$1 >= 0" | awk '{print ($1 >= 0)}') -eq 1 ]; then
+                echo "+$1"
+              else
+                echo "$1"
+              fi
+            }
+            
+            LINES_DELTA_FMT=$(format_delta "$LINES_DELTA")
+            STATEMENTS_DELTA_FMT=$(format_delta "$STATEMENTS_DELTA")
+            FUNCTIONS_DELTA_FMT=$(format_delta "$FUNCTIONS_DELTA")
+            BRANCHES_DELTA_FMT=$(format_delta "$BRANCHES_DELTA")
+            
+            cat << 'EOF' > coverage-report.md
+          ## 📊 Server Code Coverage Report
+
+          | Metric | Coverage | Delta |
+          |--------|----------|-------|
+          EOF
+            
+            echo "| Lines | ${PR_LINES}% | ${LINES_DELTA_FMT}% |" >> coverage-report.md
+            echo "| Statements | ${PR_STATEMENTS}% | ${STATEMENTS_DELTA_FMT}% |" >> coverage-report.md
+            echo "| Functions | ${PR_FUNCTIONS}% | ${FUNCTIONS_DELTA_FMT}% |" >> coverage-report.md
+            echo "| Branches | ${PR_BRANCHES}% | ${BRANCHES_DELTA_FMT}% |" >> coverage-report.md
+            echo "" >> coverage-report.md
+            echo "### 🎯 Coverage Delta" >> coverage-report.md
+            echo "This PR changes the overall server code coverage." >> coverage-report.md
+            
+            cat coverage-report.md >> $GITHUB_STEP_SUMMARY
+          else
+            echo "coverage-pr.json not found, generating basic report"
+            cat << 'EOF' > coverage-report.md
+          ## 📊 Server Code Coverage Report
+
+          Coverage data is being generated. This report will be available on the next run.
+          EOF
+          fi
+
+      - name: Comment Coverage on PR
+        if: github.event_name == 'pull_request' && success()
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: coverage
+          path: coverage-report.md
+
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Build
         run: npm run ci-build
+
+  integrationTests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs: [lint, test, build]
+
+    services:
+      localstack:
+        image: gresau/localstack-persist:4.12
+        ports:
+          - 4566:4566
+        env:
+          DYNAMODB_HEAP_SIZE: 2G
+          PROVIDER_OVERRIDE_CLOUDFORMATION: engine-legacy
+        options: >-
+          --health-cmd "awslocal s3 ls || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install AWS CLI and awslocal
+        run: |
+          pip install awscli awscli-local
+
+      - name: Initialize LocalStack
+        run: |
+          awslocal s3 mb s3://local
+          awslocal ses verify-email-identity --email support@cubecobra.com
+
+          # Create DynamoDB table
+          awslocal dynamodb create-table \
+            --table-name LOCAL_CUBECOBRA \
+            --attribute-definitions \
+              AttributeName=PK,AttributeType=S \
+              AttributeName=SK,AttributeType=S \
+              AttributeName=GSI1PK,AttributeType=S \
+              AttributeName=GSI1SK,AttributeType=S \
+              AttributeName=GSI2PK,AttributeType=S \
+              AttributeName=GSI2SK,AttributeType=S \
+              AttributeName=GSI3PK,AttributeType=S \
+              AttributeName=GSI3SK,AttributeType=S \
+              AttributeName=GSI4PK,AttributeType=S \
+              AttributeName=GSI4SK,AttributeType=S \
+            --key-schema \
+              AttributeName=PK,KeyType=HASH \
+              AttributeName=SK,KeyType=RANGE \
+            --global-secondary-indexes \
+              "[
+                {
+                  \"IndexName\": \"GSI1\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI1PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI1SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI2\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI2PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI2SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI3\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI3PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI3SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                },
+                {
+                  \"IndexName\": \"GSI4\",
+                  \"KeySchema\": [{\"AttributeName\":\"GSI4PK\",\"KeyType\":\"HASH\"},{\"AttributeName\":\"GSI4SK\",\"KeyType\":\"RANGE\"}],
+                  \"Projection\": {\"ProjectionType\":\"ALL\"}
+                }
+              ]" \
+            --billing-mode PAY_PER_REQUEST
+
+          echo "DynamoDB table created successfully"
+        env:
+          AWS_ENDPOINT: http://localhost:4566
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
+          AWS_DEFAULT_REGION: us-east-1
+
+      - name: Build client
+        run: npm run build --workspace=packages/client
+
+      - name: Build server
+        run: npm run build --workspace=packages/server
+
+      - name: Initialize mocked card files
+        run: npm run create-mock-files --workspace=packages/scripts
+
+      - name: Start server in background
+        run: |
+          cd packages/server
+          node dist/server/src/index.js > server.log 2>&1 &
+          echo $! > server.pid
+          # Wait for server to start
+          echo "Starting server with PID $(cat server.pid)..."
+          for i in {1..30}; do
+            # Check if process is still running
+            if ! kill -0 $(cat server.pid) 2>/dev/null; then
+              echo "Server process died! Checking logs..."
+              cat server.log
+              exit 1
+            fi
+            # Try to hit the health endpoint
+            if curl -f -s http://localhost:5000/ > /dev/null 2>&1; then
+              echo "Server is up and responding!"
+              break
+            fi
+            if [ $i -eq 30 ]; then
+              echo "Server failed to start within 60 seconds. Logs:"
+              cat server.log
+              exit 1
+            fi
+            echo "Waiting for server to start... ($i/30)"
+            sleep 2
+          done
+          echo "Server logs (last 20 lines):"
+          tail -20 server.log
+        env:
+          AWS_ENDPOINT: http://localhost:4566
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
+          AWS_REGION: us-east-1
+          DATA_BUCKET: local
+          DYNAMO_PREFIX: LOCAL
+          DYNAMO_TABLE: LOCAL_CUBECOBRA
+          ENV: test
+          NODE_ENV: test
+          PORT: 5000
+          SESSION_SECRET: test_session_secret
+          SESSION: test_session
+          DOMAIN: localhost:5000
+          DOWNTIME_ACTIVE: false
+          NITROPAY_ENABLED: false
+          HTTP_ONLY: true
+          LOCALSTACK_SES: true
+          ENABLE_BOT_SECURITY: false
+          CUBECOBRA_VERSION: ci-test
+          DRAFTMANCER_API_KEY: test
+          STRIPE_SECRET_KEY: test
+
+      - name: Install Playwright browsers
+        run: npm run playwright:install --workspace=packages/integrationTests
+
+      - name: Run integration tests
+        run: npx playwright test --reporter=dot --reporter=html
+        working-directory: packages/integrationTests
+
+      - name: Stop server
+        if: always()
+        run: |
+          if [ -f packages/server/server.pid ]; then
+            echo "Stopping server..."
+            kill $(cat packages/server/server.pid) || true
+          fi
+
+      - name: Upload server logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: server-logs
+          path: packages/server/server.log
+          retention-days: 7
+          if-no-files-found: ignore
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: packages/integrationTests/playwright-report/
+          retention-days: 30
+          if-no-files-found: warn
