--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -337,7 +337,7 @@ jobs:
           DYNAMO_PREFIX: LOCAL
           DYNAMO_TABLE: LOCAL_CUBECOBRA
           ENV: test
-          NODE_ENV: test
+          NODE_ENV: production
           PORT: 5000
           SESSION_SECRET: test_session_secret
           SESSION: test_session
