--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -121,28 +121,48 @@ jobs:
           echo "Found coverage-pr.json"
           PR_TOTAL=$(jq '.total' coverage-pr.json)
           PR_LINES=$(echo $PR_TOTAL | jq -r '.lines.pct')
+          PR_LINES_COVERED=$(echo $PR_TOTAL | jq -r '.lines.covered')
+          PR_LINES_TOTAL=$(echo $PR_TOTAL | jq -r '.lines.total')
           PR_STATEMENTS=$(echo $PR_TOTAL | jq -r '.statements.pct')
+          PR_STATEMENTS_COVERED=$(echo $PR_TOTAL | jq -r '.statements.covered')
+          PR_STATEMENTS_TOTAL=$(echo $PR_TOTAL | jq -r '.statements.total')
           PR_FUNCTIONS=$(echo $PR_TOTAL | jq -r '.functions.pct')
+          PR_FUNCTIONS_COVERED=$(echo $PR_TOTAL | jq -r '.functions.covered')
+          PR_FUNCTIONS_TOTAL=$(echo $PR_TOTAL | jq -r '.functions.total')
           PR_BRANCHES=$(echo $PR_TOTAL | jq -r '.branches.pct')
+          PR_BRANCHES_COVERED=$(echo $PR_TOTAL | jq -r '.branches.covered')
+          PR_BRANCHES_TOTAL=$(echo $PR_TOTAL | jq -r '.branches.total')
 
           if [ -f "coverage-base.json" ]; then
             BASE_TOTAL=$(jq '.total' coverage-base.json)
             BASE_LINES=$(echo $BASE_TOTAL | jq -r '.lines.pct')
+            BASE_LINES_COVERED=$(echo $BASE_TOTAL | jq -r '.lines.covered')
             BASE_STATEMENTS=$(echo $BASE_TOTAL | jq -r '.statements.pct')
+            BASE_STATEMENTS_COVERED=$(echo $BASE_TOTAL | jq -r '.statements.covered')
             BASE_FUNCTIONS=$(echo $BASE_TOTAL | jq -r '.functions.pct')
+            BASE_FUNCTIONS_COVERED=$(echo $BASE_TOTAL | jq -r '.functions.covered')
             BASE_BRANCHES=$(echo $BASE_TOTAL | jq -r '.branches.pct')
+            BASE_BRANCHES_COVERED=$(echo $BASE_TOTAL | jq -r '.branches.covered')
           else
             BASE_LINES=0
+            BASE_LINES_COVERED=0
             BASE_STATEMENTS=0
+            BASE_STATEMENTS_COVERED=0
             BASE_FUNCTIONS=0
+            BASE_FUNCTIONS_COVERED=0
             BASE_BRANCHES=0
+            BASE_BRANCHES_COVERED=0
           fi
 
           # Calculate deltas using awk
           LINES_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_LINES - $BASE_LINES}")
+          LINES_COUNT_DELTA=$(awk "BEGIN {printf \"%d\", $PR_LINES_COVERED - $BASE_LINES_COVERED}")
           STATEMENTS_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_STATEMENTS - $BASE_STATEMENTS}")
+          STATEMENTS_COUNT_DELTA=$(awk "BEGIN {printf \"%d\", $PR_STATEMENTS_COVERED - $BASE_STATEMENTS_COVERED}")
           FUNCTIONS_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_FUNCTIONS - $BASE_FUNCTIONS}")
+          FUNCTIONS_COUNT_DELTA=$(awk "BEGIN {printf \"%d\", $PR_FUNCTIONS_COVERED - $BASE_FUNCTIONS_COVERED}")
           BRANCHES_DELTA=$(awk "BEGIN {printf \"%.2f\", $PR_BRANCHES - $BASE_BRANCHES}")
+          BRANCHES_COUNT_DELTA=$(awk "BEGIN {printf \"%d\", $PR_BRANCHES_COVERED - $BASE_BRANCHES_COVERED}")
 
           # Format delta with + sign for positive values
           format_delta() {
@@ -154,21 +174,25 @@ jobs:
           }
 
           LINES_DELTA_FMT=$(format_delta "$LINES_DELTA")
+          LINES_COUNT_DELTA_FMT=$(format_delta "$LINES_COUNT_DELTA")
           STATEMENTS_DELTA_FMT=$(format_delta "$STATEMENTS_DELTA")
+          STATEMENTS_COUNT_DELTA_FMT=$(format_delta "$STATEMENTS_COUNT_DELTA")
           FUNCTIONS_DELTA_FMT=$(format_delta "$FUNCTIONS_DELTA")
+          FUNCTIONS_COUNT_DELTA_FMT=$(format_delta "$FUNCTIONS_COUNT_DELTA")
           BRANCHES_DELTA_FMT=$(format_delta "$BRANCHES_DELTA")
+          BRANCHES_COUNT_DELTA_FMT=$(format_delta "$BRANCHES_COUNT_DELTA")
 
           cat << 'EOF' > coverage-report.md
           ## 📊 Server Code Coverage Report
 
-          | Metric | Coverage | Delta |
-          |--------|----------|-------|
+          | Metric | Coverage | Coverage Lines | Delta % | Delta Lines |
+          |--------|----------|----------------|---------|-------------|
           EOF
 
-          echo "| Lines | ${PR_LINES}% | ${LINES_DELTA_FMT}% |" >> coverage-report.md
-          echo "| Statements | ${PR_STATEMENTS}% | ${STATEMENTS_DELTA_FMT}% |" >> coverage-report.md
-          echo "| Functions | ${PR_FUNCTIONS}% | ${FUNCTIONS_DELTA_FMT}% |" >> coverage-report.md
-          echo "| Branches | ${PR_BRANCHES}% | ${BRANCHES_DELTA_FMT}% |" >> coverage-report.md
+          echo "| Lines | ${PR_LINES}% | ${PR_LINES_COVERED}/${PR_LINES_TOTAL} | ${LINES_DELTA_FMT}% | ${LINES_COUNT_DELTA_FMT} |" >> coverage-report.md
+          echo "| Statements | ${PR_STATEMENTS}% | ${PR_STATEMENTS_COVERED}/${PR_STATEMENTS_TOTAL} | ${STATEMENTS_DELTA_FMT}% | ${STATEMENTS_COUNT_DELTA_FMT} |" >> coverage-report.md
+          echo "| Functions | ${PR_FUNCTIONS}% | ${PR_FUNCTIONS_COVERED}/${PR_FUNCTIONS_TOTAL} | ${FUNCTIONS_DELTA_FMT}% | ${FUNCTIONS_COUNT_DELTA_FMT} |" >> coverage-report.md
+          echo "| Branches | ${PR_BRANCHES}% | ${PR_BRANCHES_COVERED}/${PR_BRANCHES_TOTAL} | ${BRANCHES_DELTA_FMT}% | ${BRANCHES_COUNT_DELTA_FMT} |" >> coverage-report.md
 
           cat coverage-report.md >> $GITHUB_STEP_SUMMARY
 
