--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -94,6 +94,7 @@
     "@types/uuid": "^9.0.7",
     "babel-loader": "^9.1.3",
     "babel-plugin-module-resolver": "^5.0.2",
+    "baseline-browser-mapping": "^2.9.14",
     "core-js": "^3.46.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
