Improve integ tests (#2807)
* Add registration and login tests

* allow larger passwords

* update coverage

* Fix integ tests

* fix coverage comment

* Fix coverage commenting

* add extra integ test debugging

* use prod to enable bundle hashing in ci

* Fix tests

* Improve tests

* improve tests

* update register integ test

* lint

* fix tests maybe

* fix config generation script

* fix tests maybe

* fix test maybe

* fix test maybe

* fix tests for real

--- a/packages/integrationTests/package.json
+++ b/packages/integrationTests/package.json
@@ -10,6 +10,7 @@
     "test:headed": "cross-env HEADED=true npx playwright test --headed",
     "test:ci": "npx playwright test --reporter=dot",
     "report": "node scripts/generate-report.js",
+    "generate-test-config": "ts-node scripts/generate-test-config.ts",
     "playwright:install": "npx playwright install",
     "playwright:codegen": "npx playwright codegen",
     "playwright:codegen:local": "npx playwright codegen http://localhost:5000"
@@ -29,6 +30,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@types/node": "^20.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
