--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -196,13 +196,25 @@ jobs:
 
           cat coverage-report.md >> $GITHUB_STEP_SUMMARY
 
-      - name: Comment Coverage on PR
+      - name: Upload coverage report for PR comment
         if: github.event_name == 'pull_request'
-        uses: marocchino/sticky-pull-request-comment@v2
-        continue-on-error: true
+        uses: actions/upload-artifact@v4
         with:
-          header: coverage
+          name: coverage-report
           path: coverage-report.md
+          retention-days: 1
+
+      - name: Save PR number
+        if: github.event_name == 'pull_request'
+        run: echo ${{ github.event.pull_request.number }} > pr-number.txt
+
+      - name: Upload PR number
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@v4
+        with:
+          name: pr-number
+          path: pr-number.txt
+          retention-days: 1
 
   build:
     runs-on: ubuntu-latest
