--- a/packages/cardUpdateMonitorLambda/package.json
+++ b/packages/cardUpdateMonitorLambda/package.json
@@ -13,8 +13,8 @@
     "@aws-sdk/client-ecs": "^3.525.0",
     "@aws-sdk/client-s3": "^3.525.0",
     "@aws-sdk/lib-dynamodb": "^3.525.0",
-    "@cube-cobra/server": "workspace:*,
-    "archiver": "^6.0.1"",
+    "@cube-cobra/server": "workspace:*",
+    "archiver": "^6.0.1",
     "@cube-cobra/utils": "workspace:*"
   },
   "devDependencies": {
