--- a/packages/cardUpdateMonitorLambda/tsconfig.json
+++ b/packages/cardUpdateMonitorLambda/tsconfig.json
@@ -11,7 +11,12 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {
+      "@server/*": ["../server/src/*"],
+      "@utils/*": ["../utils/src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
