--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "npx prettier --write . && npx eslint --fix .",
     "lint:check": "npx prettier --check . && npx eslint --max-warnings=0 .",
-    "test:ci": "npm run test:ci --workspace=packages/client && npm run test:ci --workspace=packages/server",
+    "test:ci": "npm run test:ci --workspace=packages/client && npm run test:ci --workspace=packages/server && npm run test:ci --workspace=packages/jobs",
     "ci-build": "npm run build --workspace=packages/client && npm run build --workspace=packages/server",
     "download-data-files": "npm run download-data-files --workspace=packages/scripts",
     "update-draft-history": "npm run update-draft-history --workspace=packages/jobs",
