--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "npx prettier --write . && npx eslint --fix .",
     "lint:check": "npx prettier --check . && npx eslint --max-warnings=0 .",
     "test:ci": "npm run test:ci --workspace=packages/client && npm run test:ci --workspace=packages/server && npm run test:ci --workspace=packages/jobs",
-    "ci-build": "npm run build --workspace=packages/client && npm run build --workspace=packages/server",
+    "ci-build": "npm run build --workspace=packages/client && npm run build --workspace=packages/server && npm run build --workspace=packages/cdk",
     "download-data-files": "npm run download-data-files --workspace=packages/scripts",
     "update-draft-history": "npm run update-draft-history --workspace=packages/jobs",
     "update-cube-history": "npm run update-cube-history --workspace=packages/jobs",
