--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,7 @@
     "type-check": "npx tsc --noEmit",
     "start": "node server.js",
     "dev": "npm run write-git-info && nodemon -r tsconfig-paths/register src/index.ts",
-    "clean": "rm -rf dist/ node_modules/ private/ ./src/client",
+    "clean": "rm -rf dist/ node_modules/ private/ ./src/client && node -e \"const fs = require('fs'); const path = require('path'); ['src', 'scripts', 'test'].forEach(dir => { try { require('child_process').execSync(\\`find ${dir} -name '*.js' -type f\\`, {encoding: 'utf8'}).trim().split('\\\\n').filter(Boolean).forEach(jsFile => { const tsFile = jsFile.replace(/\\\\.js$/, '.ts'); if (fs.existsSync(tsFile)) { fs.unlinkSync(jsFile); console.log('Deleted:', jsFile); }}); } catch(e) {} });\"",
     "test": "npm run write-git-info && npx jest --coverage=false",
     "test:watch": "npm run write-git-info && npx jest --watch --coverage=false",
     "test:coverage": "npm run write-git-info && npx jest --coverage",
@@ -107,6 +107,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/response-time": "^2.3.9",
     "@types/sanitize-html": "^2.16.0",
+    "@types/stripe": "^8.0.416",
     "@types/uuid": "^9.0.8",
     "copyfiles": "^2.4.1",
     "eslint": "^7.32.0",
