--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -2,6 +2,7 @@
   "name": "@cubecobra/jobs",
   "version": "1.0.0",
   "scripts": {
+    "init-data": "node dist/jobs/src/init-data.js",
     "update-draft-history": "NODE_OPTIONS=--max_old_space-size=18192 node dist/jobs/src/update_draft_history.js",
     "update-cube-history": "NODE_OPTIONS=--max_old_space-size=18192 node dist/jobs/src/update_cube_history.js",
     "update-metadata-dict": "NODE_OPTIONS=--max_old_space-size=18192 node dist/jobs/src/update_metadata_dict.js",
@@ -14,7 +15,7 @@
     "dev:update-cards": "NODE_OPTIONS=--max_old_space-size=18192 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_cards.ts",
     "dev:update-combos": "NODE_OPTIONS=--max_old_space-size=18192 ts-node -r tsconfig-paths/register --project tsconfig.json src/update_combos.ts",
     "dev:repair-cube-hashes": "NODE_OPTIONS=--max_old_space-size=18192 ts-node -r tsconfig-paths/register --project tsconfig.json src/repairCubeHashes.ts --",
-    "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-combos && npm run update-cards && npm run update-combos && npm run update-cards",
+    "update-all": "npm run init-data && npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-combos && npm run update-cards && npm run update-combos && npm run update-cards",
     "fix-external-paths": "npx resolve-tspaths --out dist && node scripts/fixExternalPaths.js",
     "build": "npx tsc && npm run fix-external-paths",
     "clean": "rm -rf dist/ node_modules/",
