--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -261,6 +261,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build client
+        run: npm run build --workspace=packages/client
+        
       - name: Build server
         run: npm run build --workspace=packages/server
 
