Separate out ml to dedicated service

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "node": ">=22.0.0 <23.0.0"
   },
   "scripts": {
+    "dev": "npm-run-all --parallel dev:client dev:server dev:recommender",
+    "dev:client": "npm run dev --workspace=packages/client",
+    "dev:server": "npm run dev --workspace=packages/server",
+    "dev:recommender": "npm run dev --workspace=packages/recommenderService",
     "lint": "npx prettier --write . && npx eslint --fix .",
     "lint:check": "npx prettier --check . && npx eslint --max-warnings=0 .",
     "test:ci": "npm run test:ci --workspace=packages/client && npm run test:ci --workspace=packages/server && npm run test:ci --workspace=packages/jobs",
-    "ci-build": "npm run build --workspace=packages/client && npm run build --workspace=packages/server && npm run build --workspace=packages/cdk && npm run build --workspace=packages/dailyJobsLambda && npm run build --workspace=packages/cardUpdateMonitorLambda && npm run build --workspace=packages/jobs",
+    "ci-build": "npm run build --workspace=packages/client && npm run build --workspace=packages/server && npm run build --workspace=packages/recommenderService && npm run build --workspace=packages/cdk && npm run build --workspace=packages/dailyJobsLambda && npm run build --workspace=packages/cardUpdateMonitorLambda && npm run build --workspace=packages/jobs",
     "download-data-files": "npm run download-data-files --workspace=packages/scripts",
     "update-draft-history": "npm run update-draft-history --workspace=packages/jobs",
     "update-cube-history": "npm run update-cube-history --workspace=packages/jobs",
@@ -17,7 +21,7 @@
     "update-cards": "npm run update-cards --workspace=packages/jobs",
     "update-combos": "npm run update-combos --workspace=packages/jobs",
     "update-all": "npm run update-all --workspace=packages/jobs",
-    "publish": "npm run build --workspace=packages/client && npm run build --workspace=packages/server && npm run publish --workspace=packages/dailyJobsLambda && cd packages/scripts && npx ts-node -r tsconfig-paths/register --project tsconfig.json src/publish.ts",
+    "publish": "npm run build --workspace=packages/client && npm run build --workspace=packages/server && npm run build --workspace=packages/recommenderService && npm run publish --workspace=packages/dailyJobsLambda && cd packages/scripts && npx ts-node -r tsconfig-paths/register --project tsconfig.json src/publish.ts",
     "write-git-info": "npm run write-git-info --workspace=packages/scripts"
   },
   "husky": {
