--- a/packages/server/.env_EXAMPLE
+++ b/packages/server/.env_EXAMPLE
@@ -28,3 +28,4 @@ HTTP_ONLY="true"
 STRIPE_SECRET_KEY="apikey"
 LOCALSTACK_SES="true"
 ENABLE_BOT_SECURITY="true"
+ML_SERVICE_URL="http://localhost:5002"
