--- a/packages/server/public/manifest.json
+++ b/packages/server/public/manifest.json
@@ -11,7 +11,6 @@
   "CardSearchPage": "/js/CardSearchPage.9f99a214.bundle.js",
   "CardUpdatesPage": "/js/CardUpdatesPage.6d44ccab.bundle.js",
   "CommentPage": "/js/CommentPage.b21ebb25.bundle.js",
-  "commons": "/js/commons.e4ddb943.bundle.js",
   "ContactPage": "/js/ContactPage.e6567e49.bundle.js",
   "CreateNewRecordPage": "/js/CreateNewRecordPage.f67560d1.bundle.js",
   "CreateRecordFromDraftPage": "/js/CreateRecordFromDraftPage.982c73a1.bundle.js",
@@ -19,8 +18,8 @@
   "CubeAnalysisPage": "/js/CubeAnalysisPage.be853b78.bundle.js",
   "CubeBlogPage": "/js/CubeBlogPage.e337c55a.bundle.js",
   "CubeComparePage": "/js/CubeComparePage.550f2512.bundle.js",
-  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.0ff10bc7.bundle.js",
   "CubeDeckPage": "/js/CubeDeckPage.de2a2754.bundle.js",
+  "CubeDeckbuilderPage": "/js/CubeDeckbuilderPage.0ff10bc7.bundle.js",
   "CubeDraftPage": "/js/CubeDraftPage.80a0ebcb.bundle.js",
   "CubeHistoryPage": "/js/CubeHistoryPage.fd9ff8c3.bundle.js",
   "CubeListPage": "/js/CubeListPage.dae493c8.bundle.js",
@@ -71,8 +70,9 @@
   "UserCubePage": "/js/UserCubePage.a14042a3.bundle.js",
   "UserDecksPage": "/js/UserDecksPage.7ad758a5.bundle.js",
   "UserSocialPage": "/js/UserSocialPage.d6b101da.bundle.js",
-  "vendors": "/js/vendors.6ec17bb7.bundle.js",
   "VersionPage": "/js/VersionPage.4a140648.bundle.js",
   "VideoPage": "/js/VideoPage.b041f1bf.bundle.js",
-  "VideosPage": "/js/VideosPage.20352d97.bundle.js"
+  "VideosPage": "/js/VideosPage.20352d97.bundle.js",
+  "commons": "/js/commons.e4ddb943.bundle.js",
+  "vendors": "/js/vendors.6ec17bb7.bundle.js"
 }
