--- a/.prettierignore
+++ b/.prettierignore
@@ -7,3 +7,4 @@ packages/client/dist/**/*
 packages/jobs/dist/**/*
 packages/jobs/temp/**/*
 packages/utils/src/generated/**/*
+packages/server/public/css/stylesheet.css
